Initial commit: Setting up the Amazon Scraper project
- Creating the project directory and setting up a basic file structure.
- Implementing a basic Express server to handle scraping requests.
- Defining the scraper endpoint (`/api/scrape`) to accept a keyword and return scraped product data in JSON format.
- Implementing basic error handling to return appropriate error messages.
- Adding a basic README file to provide project overview, installation instructions, and usage details.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "estagio-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a simple scraper for the Amazon.com website, it was created based on a technical challenge imposed by a Backend internship vacancy",
   "main": "index.js",
   "type": "module",
   "scripts": {
