--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "estagio-backend",
   "version": "1.0.0",
-  "description": "This is a simple scraper for the Amazon.com website, it was created based on a technical challenge imposed by a Backend internship vacancy",
+  "description": "This project provides a basic scraper to extract product listings from the first page of Amazon search results for a given keyword. It's designed for educational purposes and personal use.",
   "main": "index.js",
   "type": "module",
   "scripts": {
